# rust-debug

./: .gitignore  Cargo.toml  README.md  clippy.toml
embedded-rust-debugger/: Cargo.toml  LICENSE-MIT  README.md
embedded-rust-debugger/src/: .stack_frame.rs.swp  commands.rs  config.rs  debugger_cli.rs  main.rs  newcommands.rs  newdebugger.rs  request_command_handlers.rs  server.rs
embedded-rust-debugger/src/cli/: mod.rs
embedded-rust-debugger/src/commands/: commands.rs  debug_event.rs  debug_request.rs  debug_response.rs
embedded-rust-debugger/src/commands_temp/: commands.rs  debug_event.rs  debug_request.rs  debug_response.rs  mod.rs
embedded-rust-debugger/src/debug_adapter/: mod.rs
embedded-rust-debugger/src/debug_handler/: config.rs  mod.rs
embedded-rust-debugger/src/debugger/: attributes.rs  call_stack.rs  memory_and_registers.rs  mod.rs  print_dwarf.rs  source_information.rs  stack_frame.rs  stacktrace.rs  utils.rs  variable.rs
embedded-rust-debugger/src/debugger/evaluate/: attributes.rs  evaluate.rs  mod.rs  pieces.rs  value.rs
embedded-rust-debugger/src/debugger/types/: mod.rs  parser.rs  types.rs
embedded-rust-debugger/src/evaluate/: attributes.rs  pieces.rs
embedded-rust-debugger/src/rust_debug/: call_stack.rs  memory_and_registers.rs  mod.rs  stack_frame.rs  utils.rs  variable.rs
embedded-rust-debugger/src/rust_debug/evaluate/: attributes.rs  evaluate.rs  mod.rs  pieces.rs  value.rs
gimli-test-example/: Cargo.toml  test.txt
notes/: dap.md  dwarf.md  dwarf_attributes.md  dwarf_tags.md  rust.md  week10.md  week11.md  week12.md  week13.md  week14.md  week15.md  week3.md  week4.md  week5.md  (+5 more)
(+36 files in other folders)
