[package]
name	= "rust-debug"
version = "0.1.0"
authors = ["Niklas <nicke.l@telia.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gimli			= "0.23.0"
anyhow			= "1.0"
log			= "0.4"

