[package]
name	= "rust-debug"
version = "0.1.0"
authors = ["Niklas <nicke.l@telia.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "A debugging library for rust code."
readme = "README.md"
documentation = "https://docs.rs/rust-debug/0.0.1/rust_debug/"
homepage = "https://github.com/Blinningjr/rust-debug"
repository = "https://github.com/Blinningjr/rust-debug"
categories = ["development-tools::debugging"]
keywords = ["debug", "debugging"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gimli			= "0.26.1"
anyhow			= "1.0"
log			= "0.4"

