[package]
name	= "embedded-rust-debugger"
version = "0.1.0"
authors = ["Niklas <nicke.l@telia.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
probe-rs		= "0.10.0"
gimli			= "0.23.0"
object			= "0.23.0"
memmap			= "0.7"
structopt		= { version = "0.3", default-features = false }
rustyline		= "8.0.0"
anyhow			= "1.0"
log			= "0.4"
simplelog		= "0.9"
debugserver-types	= "0.5"
serde_json		= "1.0"
serde			= "1.0"
capstone		= "0.8"

